Fixed bug in API docs and changed success status code from 200 to 201.
